[REFACTOR] Clean up wishlist notification code